{/* JSX 中的注释格式 */}

--- a/public/ch02-react-jsx-exp-func.html
+++ b/public/ch02-react-jsx-exp-func.html
@@ -27,6 +27,7 @@
 
       const reactSpan = (
         <span>
+          {/* JSX 中的注释格式 */}
           <h3>JSX Expression - Functional Expression</h3>
           <p>{formatUserinfo(userinfo)}</p>
         </span>
